parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INT

Grammar

Rule 0     S' -> input
Rule 1     input -> <empty>
Rule 2     input -> command input
Rule 3     command -> COMMENT
Rule 4     SYMBOL -> XYZ
Rule 5     SYMBOL -> ID
Rule 6     TEXT -> SYMBOL
Rule 7     TEXT -> STRING
Rule 8     NUMBER -> DOUBLE
Rule 9     command -> POP
Rule 10    command -> PUSH
Rule 11    command -> SCREEN NUMBER NUMBER
Rule 12    command -> SCREEN
Rule 13    command -> SAVE TEXT TEXT
Rule 14    command -> DISPLAY
Rule 15    command -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 16    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 17    command -> SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 18    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 19    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 20    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 21    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 22    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 23    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 25    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 26    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 27    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 28    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 29    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 30    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 31    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 32    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 33    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 34    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 35    command -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 36    command -> MOVE NUMBER NUMBER NUMBER
Rule 37    command -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 38    command -> SCALE NUMBER NUMBER NUMBER
Rule 39    command -> ROTATE XYZ NUMBER SYMBOL
Rule 40    command -> ROTATE XYZ NUMBER
Rule 41    command -> FRAMES NUMBER
Rule 42    command -> BASENAME TEXT
Rule 43    command -> VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 44    command -> SET SYMBOL NUMBER
Rule 45    command -> SET_KNOBS NUMBER
Rule 46    command -> AMBIENT NUMBER NUMBER NUMBER
Rule 47    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 48    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 49    command -> LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 50    command -> SHADING SHADING_TYPE
Rule 51    command -> CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 52    command -> GENERATE_RAYFILES
Rule 53    command -> MESH CO TEXT
Rule 54    command -> MESH SYMBOL CO TEXT
Rule 55    command -> MESH CO TEXT SYMBOL
Rule 56    command -> MESH SYMBOL CO TEXT SYMBOL
Rule 57    command -> SAVE_KNOBS SYMBOL
Rule 58    command -> SAVE_COORDS SYMBOL
Rule 59    command -> TWEEN NUMBER NUMBER SYMBOL SYMBOL
Rule 60    command -> FOCAL NUMBER
Rule 61    command -> WEB
Rule 62    command -> TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

Terminals, with rules where they appear

AMBIENT              : 46
BASENAME             : 42
BOX                  : 23 24 25 26
CAMERA               : 51
CO                   : 53 54 55 56
COMMENT              : 3
CONSTANTS            : 47 48
DISPLAY              : 14
DOUBLE               : 8
FOCAL                : 60
FRAMES               : 41
GENERATE_RAYFILES    : 52
ID                   : 5
INT                  : 
LIGHT                : 49
LINE                 : 27 28 29 30 31 32 33 34
MESH                 : 53 54 55 56
MOVE                 : 35 36
POP                  : 9
PUSH                 : 10
ROTATE               : 39 40
SAVE                 : 13
SAVE_COORDS          : 58
SAVE_KNOBS           : 57
SCALE                : 37 38
SCREEN               : 11 12
SET                  : 44
SET_KNOBS            : 45
SHADING              : 50
SHADING_TYPE         : 50
SPHERE               : 15 16 17 18
STRING               : 7
TEXTURE              : 62
TORUS                : 19 20 21 22
TWEEN                : 59
VARY                 : 43
WEB                  : 61
XYZ                  : 4 39 40
error                : 

Nonterminals, with rules where they appear

NUMBER               : 11 11 15 15 15 15 16 16 16 16 17 17 17 17 18 18 18 18 19 19 19 19 19 20 20 20 20 20 21 21 21 21 21 22 22 22 22 22 23 23 23 23 23 23 24 24 24 24 24 24 25 25 25 25 25 25 26 26 26 26 26 26 27 27 27 27 27 27 28 28 28 28 28 28 29 29 29 29 29 29 30 30 30 30 30 30 31 31 31 31 31 31 32 32 32 32 32 32 33 33 33 33 33 33 34 34 34 34 34 34 35 35 35 36 36 36 37 37 37 38 38 38 39 40 41 43 43 43 43 44 45 46 46 46 47 47 47 47 47 47 47 47 47 48 48 48 48 48 48 48 48 48 48 48 48 49 49 49 49 49 49 51 51 51 51 51 51 59 59 60 62 62 62 62 62 62 62 62 62 62 62 62
SYMBOL               : 6 16 17 18 18 20 21 22 22 24 25 26 26 28 29 30 30 31 32 32 33 33 34 34 34 35 37 39 43 44 47 48 49 54 55 56 56 57 58 59 59 62
TEXT                 : 13 13 42 53 54 55 56
command              : 2
input                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (30) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (34) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (36) command -> . MOVE NUMBER NUMBER NUMBER
    (37) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (38) command -> . SCALE NUMBER NUMBER NUMBER
    (39) command -> . ROTATE XYZ NUMBER SYMBOL
    (40) command -> . ROTATE XYZ NUMBER
    (41) command -> . FRAMES NUMBER
    (42) command -> . BASENAME TEXT
    (43) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (44) command -> . SET SYMBOL NUMBER
    (45) command -> . SET_KNOBS NUMBER
    (46) command -> . AMBIENT NUMBER NUMBER NUMBER
    (47) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (48) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (49) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (50) command -> . SHADING SHADING_TYPE
    (51) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (52) command -> . GENERATE_RAYFILES
    (53) command -> . MESH CO TEXT
    (54) command -> . MESH SYMBOL CO TEXT
    (55) command -> . MESH CO TEXT SYMBOL
    (56) command -> . MESH SYMBOL CO TEXT SYMBOL
    (57) command -> . SAVE_KNOBS SYMBOL
    (58) command -> . SAVE_COORDS SYMBOL
    (59) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (60) command -> . FOCAL NUMBER
    (61) command -> . WEB
    (62) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 3
    POP             shift and go to state 4
    PUSH            shift and go to state 5
    SCREEN          shift and go to state 6
    SAVE            shift and go to state 7
    DISPLAY         shift and go to state 8
    SPHERE          shift and go to state 9
    TORUS           shift and go to state 10
    BOX             shift and go to state 11
    LINE            shift and go to state 12
    MOVE            shift and go to state 13
    SCALE           shift and go to state 14
    ROTATE          shift and go to state 15
    FRAMES          shift and go to state 16
    BASENAME        shift and go to state 17
    VARY            shift and go to state 18
    SET             shift and go to state 19
    SET_KNOBS       shift and go to state 20
    AMBIENT         shift and go to state 21
    CONSTANTS       shift and go to state 22
    LIGHT           shift and go to state 23
    SHADING         shift and go to state 24
    CAMERA          shift and go to state 25
    GENERATE_RAYFILES shift and go to state 26
    MESH            shift and go to state 27
    SAVE_KNOBS      shift and go to state 28
    SAVE_COORDS     shift and go to state 29
    TWEEN           shift and go to state 30
    FOCAL           shift and go to state 31
    WEB             shift and go to state 32
    TEXTURE         shift and go to state 33

    input                          shift and go to state 1
    command                        shift and go to state 2

state 1

    (0) S' -> input .



state 2

    (2) input -> command . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (30) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (34) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (36) command -> . MOVE NUMBER NUMBER NUMBER
    (37) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (38) command -> . SCALE NUMBER NUMBER NUMBER
    (39) command -> . ROTATE XYZ NUMBER SYMBOL
    (40) command -> . ROTATE XYZ NUMBER
    (41) command -> . FRAMES NUMBER
    (42) command -> . BASENAME TEXT
    (43) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (44) command -> . SET SYMBOL NUMBER
    (45) command -> . SET_KNOBS NUMBER
    (46) command -> . AMBIENT NUMBER NUMBER NUMBER
    (47) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (48) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (49) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (50) command -> . SHADING SHADING_TYPE
    (51) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (52) command -> . GENERATE_RAYFILES
    (53) command -> . MESH CO TEXT
    (54) command -> . MESH SYMBOL CO TEXT
    (55) command -> . MESH CO TEXT SYMBOL
    (56) command -> . MESH SYMBOL CO TEXT SYMBOL
    (57) command -> . SAVE_KNOBS SYMBOL
    (58) command -> . SAVE_COORDS SYMBOL
    (59) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (60) command -> . FOCAL NUMBER
    (61) command -> . WEB
    (62) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 3
    POP             shift and go to state 4
    PUSH            shift and go to state 5
    SCREEN          shift and go to state 6
    SAVE            shift and go to state 7
    DISPLAY         shift and go to state 8
    SPHERE          shift and go to state 9
    TORUS           shift and go to state 10
    BOX             shift and go to state 11
    LINE            shift and go to state 12
    MOVE            shift and go to state 13
    SCALE           shift and go to state 14
    ROTATE          shift and go to state 15
    FRAMES          shift and go to state 16
    BASENAME        shift and go to state 17
    VARY            shift and go to state 18
    SET             shift and go to state 19
    SET_KNOBS       shift and go to state 20
    AMBIENT         shift and go to state 21
    CONSTANTS       shift and go to state 22
    LIGHT           shift and go to state 23
    SHADING         shift and go to state 24
    CAMERA          shift and go to state 25
    GENERATE_RAYFILES shift and go to state 26
    MESH            shift and go to state 27
    SAVE_KNOBS      shift and go to state 28
    SAVE_COORDS     shift and go to state 29
    TWEEN           shift and go to state 30
    FOCAL           shift and go to state 31
    WEB             shift and go to state 32
    TEXTURE         shift and go to state 33

    command                        shift and go to state 2
    input                          shift and go to state 34

state 3

    (3) command -> COMMENT .

    COMMENT         reduce using rule 3 (command -> COMMENT .)
    POP             reduce using rule 3 (command -> COMMENT .)
    PUSH            reduce using rule 3 (command -> COMMENT .)
    SCREEN          reduce using rule 3 (command -> COMMENT .)
    SAVE            reduce using rule 3 (command -> COMMENT .)
    DISPLAY         reduce using rule 3 (command -> COMMENT .)
    SPHERE          reduce using rule 3 (command -> COMMENT .)
    TORUS           reduce using rule 3 (command -> COMMENT .)
    BOX             reduce using rule 3 (command -> COMMENT .)
    LINE            reduce using rule 3 (command -> COMMENT .)
    MOVE            reduce using rule 3 (command -> COMMENT .)
    SCALE           reduce using rule 3 (command -> COMMENT .)
    ROTATE          reduce using rule 3 (command -> COMMENT .)
    FRAMES          reduce using rule 3 (command -> COMMENT .)
    BASENAME        reduce using rule 3 (command -> COMMENT .)
    VARY            reduce using rule 3 (command -> COMMENT .)
    SET             reduce using rule 3 (command -> COMMENT .)
    SET_KNOBS       reduce using rule 3 (command -> COMMENT .)
    AMBIENT         reduce using rule 3 (command -> COMMENT .)
    CONSTANTS       reduce using rule 3 (command -> COMMENT .)
    LIGHT           reduce using rule 3 (command -> COMMENT .)
    SHADING         reduce using rule 3 (command -> COMMENT .)
    CAMERA          reduce using rule 3 (command -> COMMENT .)
    GENERATE_RAYFILES reduce using rule 3 (command -> COMMENT .)
    MESH            reduce using rule 3 (command -> COMMENT .)
    SAVE_KNOBS      reduce using rule 3 (command -> COMMENT .)
    SAVE_COORDS     reduce using rule 3 (command -> COMMENT .)
    TWEEN           reduce using rule 3 (command -> COMMENT .)
    FOCAL           reduce using rule 3 (command -> COMMENT .)
    WEB             reduce using rule 3 (command -> COMMENT .)
    TEXTURE         reduce using rule 3 (command -> COMMENT .)
    $end            reduce using rule 3 (command -> COMMENT .)


state 4

    (9) command -> POP .

    COMMENT         reduce using rule 9 (command -> POP .)
    POP             reduce using rule 9 (command -> POP .)
    PUSH            reduce using rule 9 (command -> POP .)
    SCREEN          reduce using rule 9 (command -> POP .)
    SAVE            reduce using rule 9 (command -> POP .)
    DISPLAY         reduce using rule 9 (command -> POP .)
    SPHERE          reduce using rule 9 (command -> POP .)
    TORUS           reduce using rule 9 (command -> POP .)
    BOX             reduce using rule 9 (command -> POP .)
    LINE            reduce using rule 9 (command -> POP .)
    MOVE            reduce using rule 9 (command -> POP .)
    SCALE           reduce using rule 9 (command -> POP .)
    ROTATE          reduce using rule 9 (command -> POP .)
    FRAMES          reduce using rule 9 (command -> POP .)
    BASENAME        reduce using rule 9 (command -> POP .)
    VARY            reduce using rule 9 (command -> POP .)
    SET             reduce using rule 9 (command -> POP .)
    SET_KNOBS       reduce using rule 9 (command -> POP .)
    AMBIENT         reduce using rule 9 (command -> POP .)
    CONSTANTS       reduce using rule 9 (command -> POP .)
    LIGHT           reduce using rule 9 (command -> POP .)
    SHADING         reduce using rule 9 (command -> POP .)
    CAMERA          reduce using rule 9 (command -> POP .)
    GENERATE_RAYFILES reduce using rule 9 (command -> POP .)
    MESH            reduce using rule 9 (command -> POP .)
    SAVE_KNOBS      reduce using rule 9 (command -> POP .)
    SAVE_COORDS     reduce using rule 9 (command -> POP .)
    TWEEN           reduce using rule 9 (command -> POP .)
    FOCAL           reduce using rule 9 (command -> POP .)
    WEB             reduce using rule 9 (command -> POP .)
    TEXTURE         reduce using rule 9 (command -> POP .)
    $end            reduce using rule 9 (command -> POP .)


state 5

    (10) command -> PUSH .

    COMMENT         reduce using rule 10 (command -> PUSH .)
    POP             reduce using rule 10 (command -> PUSH .)
    PUSH            reduce using rule 10 (command -> PUSH .)
    SCREEN          reduce using rule 10 (command -> PUSH .)
    SAVE            reduce using rule 10 (command -> PUSH .)
    DISPLAY         reduce using rule 10 (command -> PUSH .)
    SPHERE          reduce using rule 10 (command -> PUSH .)
    TORUS           reduce using rule 10 (command -> PUSH .)
    BOX             reduce using rule 10 (command -> PUSH .)
    LINE            reduce using rule 10 (command -> PUSH .)
    MOVE            reduce using rule 10 (command -> PUSH .)
    SCALE           reduce using rule 10 (command -> PUSH .)
    ROTATE          reduce using rule 10 (command -> PUSH .)
    FRAMES          reduce using rule 10 (command -> PUSH .)
    BASENAME        reduce using rule 10 (command -> PUSH .)
    VARY            reduce using rule 10 (command -> PUSH .)
    SET             reduce using rule 10 (command -> PUSH .)
    SET_KNOBS       reduce using rule 10 (command -> PUSH .)
    AMBIENT         reduce using rule 10 (command -> PUSH .)
    CONSTANTS       reduce using rule 10 (command -> PUSH .)
    LIGHT           reduce using rule 10 (command -> PUSH .)
    SHADING         reduce using rule 10 (command -> PUSH .)
    CAMERA          reduce using rule 10 (command -> PUSH .)
    GENERATE_RAYFILES reduce using rule 10 (command -> PUSH .)
    MESH            reduce using rule 10 (command -> PUSH .)
    SAVE_KNOBS      reduce using rule 10 (command -> PUSH .)
    SAVE_COORDS     reduce using rule 10 (command -> PUSH .)
    TWEEN           reduce using rule 10 (command -> PUSH .)
    FOCAL           reduce using rule 10 (command -> PUSH .)
    WEB             reduce using rule 10 (command -> PUSH .)
    TEXTURE         reduce using rule 10 (command -> PUSH .)
    $end            reduce using rule 10 (command -> PUSH .)


state 6

    (11) command -> SCREEN . NUMBER NUMBER
    (12) command -> SCREEN .
    (8) NUMBER -> . DOUBLE

    COMMENT         reduce using rule 12 (command -> SCREEN .)
    POP             reduce using rule 12 (command -> SCREEN .)
    PUSH            reduce using rule 12 (command -> SCREEN .)
    SCREEN          reduce using rule 12 (command -> SCREEN .)
    SAVE            reduce using rule 12 (command -> SCREEN .)
    DISPLAY         reduce using rule 12 (command -> SCREEN .)
    SPHERE          reduce using rule 12 (command -> SCREEN .)
    TORUS           reduce using rule 12 (command -> SCREEN .)
    BOX             reduce using rule 12 (command -> SCREEN .)
    LINE            reduce using rule 12 (command -> SCREEN .)
    MOVE            reduce using rule 12 (command -> SCREEN .)
    SCALE           reduce using rule 12 (command -> SCREEN .)
    ROTATE          reduce using rule 12 (command -> SCREEN .)
    FRAMES          reduce using rule 12 (command -> SCREEN .)
    BASENAME        reduce using rule 12 (command -> SCREEN .)
    VARY            reduce using rule 12 (command -> SCREEN .)
    SET             reduce using rule 12 (command -> SCREEN .)
    SET_KNOBS       reduce using rule 12 (command -> SCREEN .)
    AMBIENT         reduce using rule 12 (command -> SCREEN .)
    CONSTANTS       reduce using rule 12 (command -> SCREEN .)
    LIGHT           reduce using rule 12 (command -> SCREEN .)
    SHADING         reduce using rule 12 (command -> SCREEN .)
    CAMERA          reduce using rule 12 (command -> SCREEN .)
    GENERATE_RAYFILES reduce using rule 12 (command -> SCREEN .)
    MESH            reduce using rule 12 (command -> SCREEN .)
    SAVE_KNOBS      reduce using rule 12 (command -> SCREEN .)
    SAVE_COORDS     reduce using rule 12 (command -> SCREEN .)
    TWEEN           reduce using rule 12 (command -> SCREEN .)
    FOCAL           reduce using rule 12 (command -> SCREEN .)
    WEB             reduce using rule 12 (command -> SCREEN .)
    TEXTURE         reduce using rule 12 (command -> SCREEN .)
    $end            reduce using rule 12 (command -> SCREEN .)
    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 35

state 7

    (13) command -> SAVE . TEXT TEXT
    (6) TEXT -> . SYMBOL
    (7) TEXT -> . STRING
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    STRING          shift and go to state 39
    XYZ             shift and go to state 40
    ID              shift and go to state 41

    TEXT                           shift and go to state 37
    SYMBOL                         shift and go to state 38

state 8

    (14) command -> DISPLAY .

    COMMENT         reduce using rule 14 (command -> DISPLAY .)
    POP             reduce using rule 14 (command -> DISPLAY .)
    PUSH            reduce using rule 14 (command -> DISPLAY .)
    SCREEN          reduce using rule 14 (command -> DISPLAY .)
    SAVE            reduce using rule 14 (command -> DISPLAY .)
    DISPLAY         reduce using rule 14 (command -> DISPLAY .)
    SPHERE          reduce using rule 14 (command -> DISPLAY .)
    TORUS           reduce using rule 14 (command -> DISPLAY .)
    BOX             reduce using rule 14 (command -> DISPLAY .)
    LINE            reduce using rule 14 (command -> DISPLAY .)
    MOVE            reduce using rule 14 (command -> DISPLAY .)
    SCALE           reduce using rule 14 (command -> DISPLAY .)
    ROTATE          reduce using rule 14 (command -> DISPLAY .)
    FRAMES          reduce using rule 14 (command -> DISPLAY .)
    BASENAME        reduce using rule 14 (command -> DISPLAY .)
    VARY            reduce using rule 14 (command -> DISPLAY .)
    SET             reduce using rule 14 (command -> DISPLAY .)
    SET_KNOBS       reduce using rule 14 (command -> DISPLAY .)
    AMBIENT         reduce using rule 14 (command -> DISPLAY .)
    CONSTANTS       reduce using rule 14 (command -> DISPLAY .)
    LIGHT           reduce using rule 14 (command -> DISPLAY .)
    SHADING         reduce using rule 14 (command -> DISPLAY .)
    CAMERA          reduce using rule 14 (command -> DISPLAY .)
    GENERATE_RAYFILES reduce using rule 14 (command -> DISPLAY .)
    MESH            reduce using rule 14 (command -> DISPLAY .)
    SAVE_KNOBS      reduce using rule 14 (command -> DISPLAY .)
    SAVE_COORDS     reduce using rule 14 (command -> DISPLAY .)
    TWEEN           reduce using rule 14 (command -> DISPLAY .)
    FOCAL           reduce using rule 14 (command -> DISPLAY .)
    WEB             reduce using rule 14 (command -> DISPLAY .)
    TEXTURE         reduce using rule 14 (command -> DISPLAY .)
    $end            reduce using rule 14 (command -> DISPLAY .)


state 9

    (15) command -> SPHERE . NUMBER NUMBER NUMBER NUMBER
    (16) command -> SPHERE . SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> SPHERE . NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> SPHERE . SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 41

    NUMBER                         shift and go to state 42
    SYMBOL                         shift and go to state 43

state 10

    (19) command -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> TORUS . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> TORUS . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 41

    NUMBER                         shift and go to state 44
    SYMBOL                         shift and go to state 45

state 11

    (23) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 41

    NUMBER                         shift and go to state 46
    SYMBOL                         shift and go to state 47

state 12

    (27) command -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> LINE . NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (30) command -> LINE . NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (31) command -> LINE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> LINE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> LINE . SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (34) command -> LINE . SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 41

    NUMBER                         shift and go to state 48
    SYMBOL                         shift and go to state 49

state 13

    (35) command -> MOVE . NUMBER NUMBER NUMBER SYMBOL
    (36) command -> MOVE . NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 50

state 14

    (37) command -> SCALE . NUMBER NUMBER NUMBER SYMBOL
    (38) command -> SCALE . NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 51

state 15

    (39) command -> ROTATE . XYZ NUMBER SYMBOL
    (40) command -> ROTATE . XYZ NUMBER

    XYZ             shift and go to state 52


state 16

    (41) command -> FRAMES . NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 53

state 17

